--- a/i_team.html
+++ b/i_team.html
@@ -138,8 +138,7 @@
           <h2> Postdocs</h2>
 
           <ul>
-            <li><a href="https://gowerrobert.github.io/">Robert Mansel
-                Gower</a> (3/2016<span class="style1" style="width: 300px;">–6/2016</span>) <br> current position: Assistant Professor, Télécom ParisTech, Paris, France </li>
+            <li><a href="https://gowerrobert.github.io/">Robert Mansel Gower</a> (3/2016<span class="style1" style="width: 300px;">–6/2016</span>) <br> current position: Assistant Professor, Télécom ParisTech, Paris, France </li>
 
             <li><a href="http://people.ufpr.br/%7Eademir.ribeiro/">Ademir Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015) <br> current position: Associate Professor, Federal
@@ -157,15 +156,13 @@
             </li>
 
             <li><a href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Rachael Tappenden</a> (2/2012<span class="style1" style="width:
-                300px;">–</span>7/2014)<br> current position: Assistant Professor, University of
-              Canterbury, New Zealand
+                300px;">–</span>7/2014)<br> current position: Assistant Professor, University of Canterbury, New Zealand
             </li>
 
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub Mareček</a> (1/2012<span class="style1" style="width:
                 300px;">–</span>6/2012)<br>
-            current position: Researcher Staff Member, IBM Research,
-              Ireland >
+            current position: Researcher Staff Member, IBM Research, Ireland
             </li>
 
           </ul>
@@ -181,46 +178,10 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
             </li>
 
             <li><a
-                href="http://www.maths.ed.ac.uk/people/show?person=479">Nicolas
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Loizou</a> (10/2015<span class="style1" style="width:
+                href="http://www.maths.ed.ac.uk/people/show?person=479">Nicolas Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)
-            <br>thesis: Randomized iterative methods for linear systems:
-              momentum, inexactness and gossip>
-            <br>
-            next position: postdoc at MILA, Montréal
+            <br>thesis: Randomized iterative methods for linear systems:   momentum, inexactness and gossip
+            <br>   next position: postdoc at MILA, Montréal
             </li>
 
             <li><a
