--- a/i_team.html
+++ b/i_team.html
@@ -41,7 +41,7 @@
           <h2>Research Scientists </h2>
           <ul>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (02/2020-present) </li>
-            <li><a href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent Condat</a> (11/2019-present) </li>
+            <li><a href="https://lcondat.github.io">Laurent Condat</a> (11/2019-present) </li>
           </ul>
 
           <h2>Postdocs </h2>
@@ -69,7 +69,7 @@
             <li><a href="https://www.researchgate.net/profile/Egor_Shulgin">Egor Shulgin</a> (1/2020-present)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-present)</li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur Gasanov</a> (9/2018-12/2019)</li>
+            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (9/2018-12/2019)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018)</li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a> (8/2017-12/2018)<br> </li>
@@ -77,7 +77,7 @@
 
           <h2> Research Interns</h2>
           <ul>
-            <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li> Grigory Malinovsky (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
@@ -262,31 +262,27 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
           <ul>
             <li><a
-                href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
-                Pavlakou</a> (2015)<br> MSc dissertation</li>
+                href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo Pavlakou</a> (2015)</li>
 
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
-Papamakarios</a> (2014) <br> IRDS project (<a
-                href="papers/Papamakarios.pdf">report</a>)</li>
+Papamakarios</a> (2014), IRDS project (<a href="papers/Papamakarios.pdf">report</a>)</li>
 
 
             <li><a
                 href="https://uk.linkedin.com/in/juraj-labant-21865a9b">Juraj
-                Labant</a> (2016)<br> Data Scientist at Department of
+                Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom
             </li>
 
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
-                Kisiala</a> (2015) <br> <a
-                href="https://arxiv.org/abs/1511.00140">dissertation</a> <br>
-              current position: Credit Model Risk Quant at Royal Bank of
+                Kisiala</a> (2015), <a
+                href="https://arxiv.org/abs/1511.00140">dissertation</a>,  Credit Model Risk Quant at Royal Bank of
               Scotland</li>
 
-            <li>Arefin Md. Rajib (2015) <br> Faculty at Mathematics
-              Department, <a href="http://www.du.ac.bd/">University of
-                Dhaka</a>, Bangladesh</li>
+            <li>Arefin Md. Rajib (2015), Faculty at Mathematics
+              Department, <a href="http://www.du.ac.bd/">University of Dhaka</a>, Bangladesh</li>
 
             <li>Yijun Zheng (2015)</li>
 
@@ -294,7 +290,7 @@ Papamakarios</a> (2014) <br> IRDS project (<a
 
             <li>Tong Ma (2014)</li>
 
-            <li>Rui Zhong (2014) <br> <a
+            <li>Rui Zhong (2014),  <a
                 href="http://www.tencent.com/en-us/index.shtml">Tencent</a>,
               Beijing
             </li>
@@ -303,41 +299,40 @@ Papamakarios</a> (2014) <br> IRDS project (<a
 
             <li>Tingting Tao (2013)</li>
 
-            <li>Meimei Wang (2013) <br> Citigold Associate at <a
+            <li>Meimei Wang (2013), Citigold Associate at <a
                 href="http://www.citibank.com.cn/homepage/en/cn_homepage.htm">Citibank                China</a></li>
 
             <li>Meensuk Punlavee (2013)</li>
 
-            <li><a href="https://www.linkedin.com/in/abankswatson">Alexander                Banks-Watson</a> (2012) <br> Senior Supply Chain
-              Optimization Consultant, Opex Analytics<br>
+            <li><a href="https://www.linkedin.com/in/abankswatson">Alexander                Banks-Watson</a> (2012), Senior Supply Chain
+              Optimization Consultant, Opex Analytics
             </li>
 
             <li><a
-                href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos                Delivorias</a> (2012) <br> Quant at <a
+                href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos                Delivorias</a> (2012), Quant at <a
                 href="http://www.swip.com/global/">SWIP</a></li>
 
             <li>Mihyun Jang (2012)</li>
 
-            <li>Chao Yu (2011) <br> <a href="http://www.rbs.co.uk/">Royal
+            <li>Chao Yu (2011), <a href="http://www.rbs.co.uk/">Royal
                 Bank of Scotland</a></li>
 
-            <li>William Hulme (2011) <br> <a
+            <li>William Hulme (2011), <a
                 href="http://www.nhsbt.nhs.uk/">NHS Blood &amp;
-                Transplant</a> <br> as of '14: <a
+                Transplant</a>, as of '14: <a
                 href="http://www.herc.ac.uk/">PhD studies HERC</a></li>
 
             <li><a href="https://uk.linkedin.com/in/jamesboffin">James
-                Boffin</a> (2011) <br> Data Scientist, Aviva
+                Boffin</a> (2011), Data Scientist, Aviva
             </li>
 
             <li><a href="https://uk.linkedin.com/in/marilena-karanika">Marilena
-                Karanika</a> (2010) <br> Modelling &amp; Analytics Manager
+                Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
 
             <li>Robie King (2010)</li>
 
-            <li>Jinwen Lin (2010)
-            </li>
+            <li>Jinwen Lin (2010)</li>
 
           </ul>
 
@@ -360,89 +355,24 @@ Papamakarios</a> (2014) <br> IRDS project (<a
               (2014, Edinburgh Physics) [<a
                 href="https://bitbucket.org/Mojusko/biglearning/src">code</a>]<br>
             </li>
+
             <li><a
-href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana Peneva</a> (2012, Edinburgh Mathematics), now: Oxford </li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-                Peneva</a> (2012, Edinburgh Mathematics), now: Oxford </li>
-            <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Filipecki</a> (2011, Edinburgh Mathematics), now: <a
-                href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
-
-
-
-
-
-
-
-
-
-
-
-
-
-                @ Chemnitz</a><br>
+            <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz  Filipecki</a> (2011, Edinburgh Mathematics), now: <a
+                href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc @ Chemnitz</a>
             </li>
+
             <li>Edward Cumberlege (2011, Edinburgh Mathematics), now: <a
 href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=264554286&amp;privcapId=214118497&amp;previousCapId=214118497&amp;previousTitle=Sagamore%20Investments">Director
-
-
-
-
-
-
-
-
-
-
-
-
-
-                @ Sagamore Investments </a><br>
+      @ Sagamore Investments </a>
             </li>
-            <li>Bartosz Filipecki (2010, Edinburgh Mathematics)<br>
+
+            <li>Bartosz Filipecki (2010, Edinburgh Mathematics)
             </li>
+
           </ul>
+
           <h2>Visitors</h2>
           <ul>
             <li><a
