--- a/i_papers.html
+++ b/i_papers.html
@@ -56,6 +56,16 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [130] Adil Salim, Laurent Condat, Konstantin Mishchenko, and Peter Richtárik <br>
+          <b>Dualize, split, randomize: fast nonsmooth optimization algorithms</b><br>
+          [<a href="https://arxiv.org/abs/2004.02635">arXiv</a>] [PDDY, SPDDY, SPD3O, SPAPC] <br>
+          <br>
+
+          [129] Atal Narayan Sahu, Aritra Dutta, Aashutosh Tiwari, and Peter Richtárik <br>
+          <b>On the convergence analysis of asynchronous SGD for solving consistent linear systems</b><br>
+          [<a href="https://arxiv.org/abs/2004.02163">arXiv</a>] [DASGD] <br>
+          <br>
+
           [128] Grigory Malinovsky, Dmitry Kovalev, Elnur Gasanov, Laurent Condat, and Peter Richtárik <br>
           <b>From local SGD to local fixed point methods for federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
