--- a/index.html
+++ b/index.html
@@ -30,13 +30,64 @@
         <div id="content">
 
 
-<h3>April 6, 2020</h3>
+
+<h3>April 7, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2004.02635">"Dualize, Split, Randomize: Fast Nonsmooth Optimization Algorithms"</a> -
+joint work with <a href="https://adil-salim.github.io">Adil Salim</a>, <a href="https://lcondat.github.io">Laurent Condat</a>, and <a href="https://konstmish.github.io">Konstantin Mishchenko</a>.<br>
+<br>
+
+Abstract: <i>
+We introduce a new primal-dual algorithm for minimizing the sum of three convex functions, each of which has its own oracle. Namely, the first one is differentiable, smooth and possibly stochastic, the second is proximable, and the last one is a composition of a proximable function with a linear map. Our theory covers several settings that are not tackled by any existing algorithm; we illustrate their importance with real-world applications. By leveraging variance reduction, we obtain convergence with linear rates under strong convexity and fast sublinear convergence under convexity assumptions. The proposed theory is simple and unified by the umbrella of stochastic Davis-Yin splitting, which we design in this work. Finally, we illustrate the efficiency of our method through numerical experiments.
+</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>April 5, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2004.02163">"On the Convergence Analysis of Asynchronous SGD for Solving Consistent Linear Systems"</a> -
+joint work with <a href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal Narayan Sahu</a>, <a href="https://www.aritradutta.com">Aritra Dutta</a>, and Aashutosh Tiwari.<br>
+<br>
+
+Abstract: <i>
+In the realm of big data and machine learning, data-parallel, distributed stochastic algorithms have drawn significant attention in the present days. While the synchronous versions of these algorithms are well
+understood in terms of their convergence, the convergence analyses of their asynchronous counterparts are not widely studied.
+In this paper, we propose and analyze a  distributed, asynchronous parallel SGD method in light of solving an arbitrary consistent linear system by reformulating the system into a stochastic optimization problem as
+studied by Richtárik and Takáč in [35]. We compare the convergence rates of our asynchronous SGD algorithm with the
+synchronous parallel algorithm proposed by Richtárik and Takáč in [35] under different choices of the hyperparameters---the stepsize, the damping factor, the number of processors, and the delay factor.
+We show that our asynchronous parallel SGD algorithm also enjoys a global linear convergence rate, similar to the "basic method" and the synchronous parallel method in [35] for solving any arbitrary consistent
+linear system via stochastic reformulation. We also show that our asynchronous parallel SGD improves upon the "basic method" with a better convergence rate when the number of processors is larger than four.
+We further show that this asynchronous approach performs asymptotically better than its synchronous counterpart for certain linear systems. Moreover, for certain linear systems, we compute the minimum number of
+processors required for which our asynchronous parallel SGD is better, and find that this number can be as low as two for some ill-conditioned problems.
+</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>April 3, 2020</h3>
 <h1>New Paper</h1>
 <br>
 
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2004.01442">"From Local SGD to Local Fixed Point Methods for Federated Learning"</a> -
-joint work with Grigory Malinovsky, <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="http://elnurgasanov.me">Elnur Gasanov</a>, and <a href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent Condat</a>.<br>
+joint work with Grigory Malinovsky, <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="http://elnurgasanov.me">Elnur Gasanov</a>, and <a href="https://lcondat.github.io">Laurent Condat</a>.<br>
 <br>
 
 Abstract: <i>
