--- a/i_talks.html
+++ b/i_talks.html
@@ -45,7 +45,7 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 3-
 </p>
 
 <p>
-<a href="https://icml.cc">ICML 2020</a> Workshop: "Beyond First Order Methods", Vienna, Austria, July  2020 (plenary)
+<a href="https://icml.cc">ICML 2020</a> <a href="https://sites.google.com/view/optml-icml2020">Workshop: "Beyond First Order Methods"</a>, Vienna, Austria, July  2020 (plenary)
 </p>
 
 <p>
