--- a/i_team.html
+++ b/i_team.html
@@ -346,12 +346,12 @@ Papamakarios</a> (2014), IRDS project (<a href="papers/Papamakarios.pdf">report<
             <li> Miro Psota (2016-2017, Comenius University)</li>
             <li>Sean Ryan (2015-2016, Edinburgh Mathematics) -
               Stochastic methods for solving large linear systems</li>
-            <li><a href="https://mojmirmutny.weebly.com/">Mojmír Mutný</a>
+            <li><a href="https://las.inf.ethz.ch/people/mojmir-mutny">Mojmír Mutný</a>
               (2015, Edinburgh Physics), now: PhD student @ ETH
               Zurich&nbsp;</li>
             <li>Debadri Mukherjee (2014, Edinburgh Informatics), now:
               analyst &amp; JP Morgan Chase &amp; Co</li>
-            <li><a href="https://mojmirmutny.weebly.com/">Mojmír Mutný</a>
+            <li><a href="https://las.inf.ethz.ch/people/mojmir-mutny">Mojmír Mutný</a>
               (2014, Edinburgh Physics) [<a
                 href="https://bitbucket.org/Mojusko/biglearning/src">code</a>]<br>
             </li>
