--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div id="content">
 
 
+<h3>April 20, 2020</h3>
+<h1>ICML, UAI and COLT Author Response Deadlines</h1>
+<br>
+
+I am busy: <a href="https://icml.cc">ICML</a> and <a href="http://www.auai.org/uai2020/call_for_papers.php">UAI</a> rebuttal deadline is today, and for
+<a href="http://learningtheory.org/colt2020/">COLT</a> the deadline is on April 24.
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 <h3>April 7, 2020</h3>
 <h1>New Paper</h1>
