--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <br>
 
 I am busy: <a href="https://icml.cc">ICML</a> and <a href="http://www.auai.org/uai2020/call_for_papers.php">UAI</a> rebuttal deadline is today, and for
-<a href="http://learningtheory.org/colt2020/">COLT</a> the deadline is on April 24.
+<a href="http://learningtheory.org/colt2020/">COLT</a> the deadline is on April 24.<br>
 
 <br>
 <br>
