TTIC + One World Seminar Talk

--- a/i_talks.html
+++ b/i_talks.html
@@ -83,6 +83,10 @@ AI: Collaborate and Accelerate, College of Computer Sciences and Information Tec
 </p>
 
 <p>
+<a href="https://owos.univie.ac.at">One World Optimization Seminar</a>, Zoom, April 27, 2020 (invited) 
+</p>
+
+<p>
 Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
