--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@ I am busy: <a href="https://icml.cc">ICML</a> and <a href="http://www.auai.org/u
 <br>
 
 
+
+<h3>April 20, 2020</h3>
+<h1>Filip Hanzely Accepted a Position at TTIC</h1>
+<br>
+
+<a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> accepted a Research Assistant Professorship at <a href="https://www.ttic.edu">Toyota Technological Institute at Chicago</a> (TTIC).
+Filip has written his thesis and will submit it soon. He is expected to graduate this Summer, and will start his new position in Chicago in the Fall. Filip has obatined multiple other offers besides this, including a Tenure-Track Assistant Professorship and a Postdoctoral Fellowship in a top machine learning group.
+Congratulations!
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>April 7, 2020</h3>
 <h1>New Paper</h1>
 <br>
