--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         <div id="content">
 
 
-<h3>April 20, 2020</h3>
-<h1>ICML, UAI and COLT Author Response Deadlines</h1>
-<br>
+<h3>April 25, 2020</h3>
+<h1>Talk at the One World Optimization Seminar</h1>
 
-I am busy: <a href="https://icml.cc">ICML</a> and <a href="http://www.auai.org/uai2020/call_for_papers.php">UAI</a> rebuttal deadline is today, and for
-<a href="http://learningtheory.org/colt2020/">COLT</a> the deadline is on April 24.<br>
+<br>
+ I will give a talk at the "One World Optimization Seminar" series on Monday, April 27, at 3pm CEST. This is a new exciting initiative, and my talk is only the second in the series. I will speak about some new results realated to
+ second order methods and randomness.  One of the advantages of this new format is that anyone can attend - indeed, attendance is via <a href="https://zoom.us">Zoom</a>.
+ However, you need to register online in order to get access. Hope to "see" many of you there!
+<br>
 
 <br>
 <br>
@@ -45,7 +47,7 @@ I am busy: <a href="https://icml.cc">ICML</a> and <a href="http://www.auai.org/u
 
 
 
-<h3>April 20, 2020</h3>
+<h3>April 21, 2020</h3>
 <h1>Filip Hanzely Accepted a Position at TTIC</h1>
 <br>
 
@@ -59,6 +61,21 @@ Congratulations!
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
 <br>
 <br>
+
+
+<h3>April 20, 2020</h3>
+<h1>ICML, UAI and COLT Author Response Deadlines</h1>
+<br>
+
+I am busy: <a href="https://icml.cc">ICML</a> and <a href="http://www.auai.org/uai2020/call_for_papers.php">UAI</a> rebuttal deadline is today, and for
+<a href="http://learningtheory.org/colt2020/">COLT</a> the deadline is on April 24.<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 
 <h3>April 7, 2020</h3>
