--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h1>Talk at the One World Optimization Seminar</h1>
 
 <br>
- I will give a talk at the "One World Optimization Seminar" series on Monday, April 27, at 3pm CEST. This is a new exciting initiative, and my talk is only the second in the series. I will speak about some new results realated to
+ I will give a talk in the <a href="https://owos.univie.ac.at">One World Optimization Seminar</a> series on Monday, April 27, at 3pm CEST. This is a new exciting initiative, and my talk is only the second in the series. I will speak about some new results realated to
  second order methods and randomness.  One of the advantages of this new format is that anyone can attend - indeed, attendance is via <a href="https://zoom.us">Zoom</a>.
  However, you need to register online in order to get access. Hope to "see" many of you there!
 <br>
