--- a/i_papers.html
+++ b/i_papers.html
@@ -254,6 +254,7 @@
           and Statistics (AISTATS 2020)<br>
           [<a href="https://arxiv.org/abs/1905.11261">arXiv</a>]<br>
           <br>
+
           [100] Samuel Horváth, Chen-Yu Ho, Ľudovít Horváth, Atal
           Narayan Sahu, Marco Canini and Peter Richtárik<br>
           <b>Natural compression for distributed deep learning</b><br>
@@ -261,43 +262,35 @@
           [<a href="https://arxiv.org/abs/1905.10988">arXiv</a>] [<a
             href="posters/Poster-Cnat.pdf">poster</a>]<br>
           <br>
+
           [99] Robert M. Gower, Dmitry Kovalev, Felix Lieder and Peter
           Richtárik<br>
           <b>RSN: Randomized Subspace Newton</b><br>
-          <a
-            href="http://papers.nips.cc/paper/8351-rsn-randomized-subspace-newton">33rd
-
-
-
-
-
-
-
-
-
-
-            Conference on Neural Information Processing Systems</a>
-          (NeurIPS 2019)<br>
+          <a  href="http://papers.nips.cc/paper/8351-rsn-randomized-subspace-newton">33rd Conference on Neural Information Processing Systems</a> (NeurIPS 2019)<br>
           <b> </b> [<a href="https://arxiv.org/abs/1905.10874">arXiv</a>]
           [<a href="posters/Poster-RSN.pdf">poster</a>]<br>
           <br>
+
           [98] Aritra Dutta, Filip Hanzely, Jingwei Liang and Peter
           Richtárik<br>
           <b>Best pair formulation &amp; accelerated scheme for
             non-convex principal component pursuit</b><b><br>
           </b> [<a href="https://arxiv.org/abs/1905.10598">arXiv</a>]<br>
           <br>
+
           [97] Nicolas Loizou and Peter Richtárik<br>
           <b>Revisiting randomized gossip algorithms: general framework,
             convergence rates and novel block and accelerated protocols</b><br>
           [<a href="https://arxiv.org/abs/1905.08645">arXiv</a>]<br>
           <br>
+
           [96] Nicolas Loizou and Peter Richtárik<br>
           <b>Convergence analysis of inexact randomized iterative
             methods</b><br>
           [<a href="https://arxiv.org/abs/1903.07971">arXiv</a>] [code:
           iBasic, iSDSA, iSGD, iSPM, iRBK, iRBCD]<br>
           <br>
+
           [95] Amedeo Sapio, Marco Canini, Chen-Yu Ho, Jacob Nelson,
           Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud
           Moshref, Dan R. K. Ports and Peter Richtárik<br>
@@ -306,6 +299,7 @@
           [<a href="https://arxiv.org/abs/1903.06701">arXiv</a>] [code:
           SwitchML]<br>
           <br>
+
           [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko,
           Peter Richtárik and Sebastian Stich<br>
           <b>Stochastic distributed learning with gradient quantization
@@ -316,50 +310,37 @@
           <br>
 
           [93] El Houcine Bergou, Eduard Gorbunov and Peter Richtárik<br>
-          <b>Stochastic three points method for unconstrained smooth
-            minimization</b><br>
-          [<a href="https://arxiv.org/abs/1902.03591">arXiv</a>] [code:
-          STP]<br>
+          <b>Stochastic three points method for unconstrained smooth minimization</b><br>
+          [<a href="https://arxiv.org/abs/1902.03591">arXiv</a>] [code: STP]<br>
           <br>
 
-          [92] Adel Bibi, El Houcine Bergou, Ozan Sener, Bernard Ghanem
-          and Peter Richtárik<br>
-          <b>A stochastic derivative-free optimization method with
-            importance sampling</b><br>
-          <a href="https://aaai.org/Conferences/AAAI-20/">34th AAAI
-            Conference on Artificial Intelligence</a> (AAAI-20)<br>
-          [<a href="https://arxiv.org/abs/1902.01272">arXiv</a>] [code:
-          STP_IS]<br>
+          [92] Adel Bibi, El Houcine Bergou, Ozan Sener, Bernard Ghanem and Peter Richtárik<br>
+          <b>A stochastic derivative-free optimization method with importance sampling</b><br>
+          <a href="https://aaai.org/Conferences/AAAI-20/">34th AAAI Conference on Artificial Intelligence</a> (AAAI-20)<br>
+          [<a href="https://arxiv.org/abs/1902.01272">arXiv</a>] [code: STP_IS]<br>
           <br>
 
           [91] Konstantin Mishchenko, Filip Hanzely and Peter Richtárik<br>
-          <b>99% of distributed optimization is a waste of time: the
-            issue and how to fix it</b><br>
+          <b>99% of distributed optimization is a waste of time: the issue and how to fix it</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/1901.09437">arXiv</a>] [code:
-          IBCD, ISAGA, ISGD, IASGD, ISEGA]<br>
+          [<a href="https://arxiv.org/abs/1901.09437">arXiv</a>] [code:  IBCD, ISAGA, ISGD, IASGD, ISEGA]<br>
           <br>
 
-          [90] Konstantin Mishchenko, Eduard Gorbunov, Martin Takáč and
-          Peter Richtárik<br>
+          [90] Konstantin Mishchenko, Eduard Gorbunov, Martin Takáč and Peter Richtárik<br>
           <b>Distributed learning with compressed gradient differences</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/1901.09269">arXiv</a>] [code:
-          DIANA]<br>
+          [<a href="https://arxiv.org/abs/1901.09269">arXiv</a>] [code: DIANA]<br>
           <br>
 
-          [89] Robert Mansel Gower, Nicolas Loizou, Xun Qian, Alibek
-          Sailanbayev, Egor Shulgin and Peter Richtárik<br>
+          [89] Robert Mansel Gower, Nicolas Loizou, Xun Qian, Alibek Sailanbayev, Egor Shulgin and Peter Richtárik<br>
           <b>SGD: general analysis and improved rates</b><br>
-          <a href="http://proceedings.mlr.press/v97/qian19b.html">Proceedings of the 36th International Conference on Machine Learning,
-            PMLR 97:5200-5209, 2019</a><br>
+          <a href="http://proceedings.mlr.press/v97/qian19b.html">Proceedings of the 36th International Conference on Machine Learning, PMLR 97:5200-5209, 2019</a><br>
           [<a href="https://arxiv.org/abs/1901.09401">arXiv</a>] [<a
             href="posters/Poster-SGD_AS.pdf">poster</a>] [code: SGD-AS]<br>
           <br>
 
           [88] Dmitry Kovalev, Samuel Horváth and Peter Richtárik<br>
-          <b>Don’t jump through hoops and remove those loops: SVRG and
-            Katyusha are better without the outer loop<br>
+          <b>Don’t jump through hoops and remove those loops: SVRG and Katyusha are better without the outer loop<br>
           </b><a href="http://alt2020.algorithmiclearningtheory.org">31st International Conference on Learning Theory</a> (ALT 2020)<br>
           [<a href="https://arxiv.org/abs/1901.08689">arXiv</a>] [code: L-SVRG, L-Katyusha]<br>
           <br>
@@ -692,6 +673,7 @@ href="http://www.androidauthority.com/google-machine-learning-privacy-federated-
             href="bib/46.bib">bib</a>] [<a
             href="posters/Poster-StochBFGS.pdf">poster</a>]<br>
           <br>
+
           [45] Dominik Csiba and Peter Richtárik<br>
           <b>Importance sampling for minibatches</b><br>
           <a href="http://jmlr.org/papers/v19/16-241.html">Journal of
@@ -699,6 +681,7 @@ href="http://www.androidauthority.com/google-machine-learning-privacy-federated-
           [<a href="http://arxiv.org/abs/1602.02283">arXiv</a>] [<a
             href="bib/45.bib">bib</a>]<br>
           <br>
+
           [44] Robert M. Gower and Peter Richtárik<br>
           <b>Randomized quasi-Newton updates are linearly convergent
             matrix inversion algorithms</b><br>
@@ -712,16 +695,13 @@ href="http://epubs.siam.org/action/showMostReadArticles?journalCode=sjmael&amp;"
           [code: SIMI, RBFGS, AdaRBFGS, ...]
 
           <h1>Prepared in 2015 </h1>
-          <p>[43] Zeyuan Allen-Zhu, Zheng Qu, Peter Richtárik and Yang
-            Yuan<br>
-            <b>Even faster accelerated coordinate descent using
-              non-uniform sampling</b><br>
-            <a href="http://proceedings.mlr.press/v48/allen-zhuc16.html">Proceedings
-of the 33rd International Conference on Machine Learning,
-              PMLR 48:1110-1119, 2016</a><br>
-            [<a href="http://arxiv.org/abs/1512.09103">arXiv</a>] [<a
-              href="bib/43.bib">bib</a>] [code: NU_ACDM]<br>
+
+          <p>[43] Zeyuan Allen-Zhu, Zheng Qu, Peter Richtárik and Yang Yuan<br>
+            <b>Even faster accelerated coordinate descent using non-uniform sampling</b><br>
+            <a href="http://proceedings.mlr.press/v48/allen-zhuc16.html">Proceedings of the 33rd International Conference on Machine Learning, PMLR 48:1110-1119, 2016</a><br>
+            [<a href="http://arxiv.org/abs/1512.09103">arXiv</a>] [<a  href="bib/43.bib">bib</a>] [code: NU_ACDM]<br>
           </p>
+
           <p>[42] Robert M. Gower and Peter Richtárik<br>
             <b>Stochastic dual ascent for solving linear systems</b><br>
             [<a href="http://arxiv.org/abs/1512.06890">arXiv</a>] [code:
@@ -731,6 +711,7 @@ of the 33rd International Conference on Machine Learning,
                 src="imgs/youtube.png" width="17" height="15" border="0"></a>]
             <a href="http://arxiv.org/abs/1512.04039"><br>
             </a></p>
+
           <p>[41] Chenxin Ma, Jakub Konečný, Martin Jaggi, Virginia
             Smith, Michael I Jordan, P. Richtárik and Martin Takáč <b>Distributed optimization with arbitrary local solvers</b><br>
             <a
@@ -756,19 +737,15 @@ of the 33rd International Conference on Machine Learning,
 Journal on Matrix Analysis and Applications 36(4):1660-1690, 2015</a><span
               class="important"><br>
               Most Downloaded SIMAX Paper <a
-href="http://epubs.siam.org/action/showMostReadArticles?journalCode=sjmael&amp;">(1st place: 2017; 2nd place: 2018)</a></span><a
-href="http://epubs.siam.org/action/showMostReadArticles?journalCode=sjmael&amp;">
-            </a><span class="important"><br>
-              Gower: 18th IMA Leslie Fox Prize (2nd Prize), 2017</span>
-            <a
-              href="http://people.maths.ox.ac.uk/wathen/fox/shortlist.php">link</a><br>
-            [<a href="http://arxiv.org/abs/1506.03296">arXiv</a>] [<a
-              href="talks/TALK-2015-09-Linear_Systems.pdf">slides</a>] <br>
+href="http://epubs.siam.org/action/showMostReadArticles?journalCode=sjmael&amp;">(1st place: 2017-2020)</a></span>
+<br><span class="important">Gower: 18th IMA Leslie Fox Prize (2nd Prize), 2017</span>
+            <a  href="http://people.maths.ox.ac.uk/wathen/fox/shortlist.php">link</a><br>
+            [<a href="http://arxiv.org/abs/1506.03296">arXiv</a>]
+            [<a href="talks/TALK-2015-09-Linear_Systems.pdf">slides</a>] <br>
           </p>
 
           <p>[38] Dominik Csiba and Peter Richtárik <br>
-            <b>Primal method for ERM with flexible mini-batching schemes
-              and non-convex losses</b><br>
+            <b>Primal method for ERM with flexible mini-batching schemes and non-convex losses</b><br>
             [<a href="http://arxiv.org/abs/1506.02227">arXiv</a>] [code:
             dfSDCA]<br>
           </p>
