--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
 <h1>Talk at the One World Optimization Seminar</h1>
 
 <br>
- I will give a talk within the <a href="https://owos.univie.ac.at">One World Optimization Seminar</a> series on Monday, April 27, at 3pm CEST. This is a new exciting initiative,
- and my talk is only the second in the series. I will speak about some new results realated to
- second order methods and randomness.  One of the advantages of this new format is that anyone can attend - indeed, attendance is via
- <a href="https://zoom.us">Zoom</a>.
- However, you need to register online in advance in order to get access. Hope to "see" many of you there!
+I will give a talk within the <a href="https://owos.univie.ac.at">One World Optimization Seminar</a>
+series on Monday, April 27, at 3pm CEST. This is a new exciting initiative, and my talk is only the
+second in the series. I will speak about some new results related to second order methods and randomness.
+One of the advantages of this new format is that anyone can attend - indeed, attendance is via
+<a href="https://zoom.us">Zoom</a>. However, you need to register online in advance in order to get access.
+Hope to "see" many of you there!
 <br>
 
 <br>
@@ -63,6 +64,7 @@ Congratulations!
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
 <br>
 <br>
+
 
 
 <h3>April 20, 2020</h3>
