--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@ One of the advantages of this new format is that anyone can attend - indeed, att
 Hope to "see" many of you there!
 <br>
 
+Update (April 29): The <a href="https://owos.univie.ac.at/fileadmin/user_upload/k_owos/Peter_Richtarik-Stochastic_Newton.pdf">slides</a> and <a href="https://www.youtube.com/watch?v=HGQkct3db-c">video recording</a> of my talk are now available.
+<br>
+
 <br>
 <br>
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
