--- a/i_team.html
+++ b/i_team.html
@@ -77,6 +77,8 @@
 
           <h2> Research Interns</h2>
           <ul>
+            <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-present</li>
+            <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-present</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
