--- a/i_talks.html
+++ b/i_talks.html
@@ -83,7 +83,7 @@ AI: Collaborate and Accelerate, College of Computer Sciences and Information Tec
 </p>
 
 <p>
-<a href="https://owos.univie.ac.at">One World Optimization Seminar</a>, Zoom, April 27, 2020 (invited) 
+<a href="https://owos.univie.ac.at">One World Optimization Seminar</a>, Zoom, April 27, 2020 (invited)
 </p>
 
 <p>
@@ -95,6 +95,10 @@ Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="import
 <h1>Video Talks</h1>
 
 
+<p>
+<a href="https://www.youtube.com/watch?v=HGQkct3db-c">On Second Order Methods and Randomness</a> (73 mins)
+<br> One World Optimization Seminar, 4/2020
+</p>
 
 <p>
 <a href="https://www.youtube.com/watch?v=a05S0kL5u30">A Guided Walk Through the ZOO of Stochastic Gradient Descent Methods</a> (5 hrs)
@@ -125,8 +129,7 @@ Yandex, Russia, 12/2017
 </p>
 
 <p><a href="https://www.youtube.com/watch?v=iZc2eFqS2l4">Stochastic
-Primal-Dual Hybrid Gradient Algorithm with Arbitrary
-Sampling</a> (1 hr)<br>
+Primal-Dual Hybrid Gradient Algorithm with Arbitrary Sampling</a> (1 hr)<br>
 MIPT, Moscow, Russia, 10/2017
 </p>
 
@@ -144,24 +147,19 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
 Ecole Polytechnique, France, 8/2017
 </p>
 
-<p><a href="https://www.youtube.com/watch?v=RbkhWrTbrKs">Stochastic
-Dual Ascent for Solving Linear Systems</a> (31 mins)<br>
+<p><a href="https://www.youtube.com/watch?v=RbkhWrTbrKs">Stochastic Dual Ascent for Solving Linear Systems</a> (31 mins)<br>
 The Alan Turing Institute, London, UK, 10/2016
 </p>
 
-<p><a href="https://www.youtube.com/watch?v=BS0kF4YijGc">Introduction
-to Big Data Optimization</a> (55 mins)<br>
+<p><a href="https://www.youtube.com/watch?v=BS0kF4YijGc">Introduction to Big Data Optimization</a> (55 mins)<br>
 Portsmouth, UK, 9/2016
 </p>
 
-<p><a href="https://www.youtube.com/watch?v=0sHOfqhCZw0">Accelerated,
-Parallel and Proximal Coordinate Descent</a> (90 mins)<br>
+<p><a href="https://www.youtube.com/watch?v=0sHOfqhCZw0">Accelerated, Parallel and Proximal Coordinate Descent</a> (90 mins)<br>
 Moscow, Russia, 2/2014
 </p>
 
-<p><a href="https://www.youtube.com/watch?v=IQgnstB0n2E">Parallel
-Coordinate Descent Methods for Big Data Optimization</a>
-(55 mins)<br>
+<p><a href="https://www.youtube.com/watch?v=IQgnstB0n2E">Parallel Coordinate Descent Methods for Big Data Optimization</a> (55 mins)<br>
 Simons Institute, Berkeley, 10/2013
 </p>
 
