--- a/index.html
+++ b/index.html
@@ -29,6 +29,41 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>May 4, 2020</h3>
+<h1>FLOW: Federated Learning One World Seminar</h1>
+
+<br>
+Together with <a href = "http://researchers.lille.inria.fr/abellet/">Aurélien Bellet</a> (Inria), <a href = "https://www.cs.cmu.edu/~smithv/">Virginia Smith</a> (Carnegie Mellon) and
+<a href= "https://ist.ac.at/en/research/alistarh-group/">Dan Alistarh</a> (IST Austria), we are launching <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">FLOW: Federated Learning One World Seminar.</a>
+The seminar will take place on a weekly basis on Wednesdays. All talks will be delivered via Zoom. The first two talks are <br> <br>
+May 13, Ahmed Khaled (Cairo): On the Convergence of Local SGD on Identical and Heterogeneous Data <br> <br>
+May 20, Blake Woodworth (TTIC): Is Local SGD Better than Minibatch SGD? <br> 
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>May 3, 2020</h3>
+<h1>Talk at the Montréal Machine Learning and Optimization Seminar</h1>
+
+<br>
+On Friday this week (May 8), I will give a talk entitled "On Second Order Methods and Randomness" at the  <a href="https://mtl-mlopt.github.io">Montréal Machine
+Learning and Optimization (MTL MLOpt) Seminar</a>. This is an online seminar delivered via Google Meet. Starting time: 9am PDT.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 
 <h3>April 25, 2020</h3>
 <h1>Talk at the One World Optimization Seminar</h1>
