--- a/i_talks.html
+++ b/i_talks.html
@@ -75,15 +75,15 @@ University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <spa
 </p>
 
 <p>
+<a href="https://mtl-mlopt.github.io">Montréal Machine Learning and Optimization (MTL MLOpt) Seminar</a>, via Google Meet, May 8, 2020 (invited)
+</p>
+
+<p>
 <a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span> (accepted <a href="https://arxiv.org/abs/1905.13278">paper</a>)
 </p>
 
 <p>
 AI: Collaborate and Accelerate, College of Computer Sciences and Information Technology (CCSIT), King Faisal University, Al-Ahsa, Saudi Arabia, April 8, 2020 (keynote speaker) <span class="important">cancelled due to Covid-19</span>
-</p>
-
-<p>
-<a href="https://owos.univie.ac.at">One World Optimization Seminar</a>, Zoom, April 27, 2020 (invited)
 </p>
 
 <p>
@@ -167,7 +167,11 @@ Simons Institute, Berkeley, 10/2013
 
 <h1>2019 Talks</h1>
 
-
+<p>
+[167]
+<a href="https://www.youtube.com/watch?v=HGQkct3db-c">On Second Order Methods and Randomness</a>,
+ One World Optimization Seminar, April 27, 2020 (invited)
+</p>
 
 <p>
 [166]
@@ -392,100 +396,41 @@ Privacy</a>, September 11-12, 2017, Lille, France
 (invited) [<a href="talks/TALK-private-gossip.pdf">slides</a>]
 </p>
 
-          <p>[133] <a
-              href="http://www.ds3-datascience-polytechnique.fr/">Data
-              Science Summer School</a>, CMAP, École Polytechnique,
-            Paris, France, Aug 28-Sept 1, 2017 (invited minicourse on
-            randomized optimization methods) [<a
-              href="talks/RandOpt-DS3.pdf">slides</a>] <a
-              href="https://portail.polytechnique.edu/datascience/fr/les-conferences"><img
-                style="border: 0px solid ; width: 30px; height: 21px;"
-                alt="YouTube" src="imgs/youtube.png"></a></p>
-          <p>[132] <a href="https://2017.icml.cc/">34th International
-              Conference on Machine Learning</a>, Sydney, Australia,
-            August 6-11, 2017 (attending)</p>
-          <p>[131] <a
-              href="http://www.fields.utoronto.ca/activities/17-18/AN70">Workshop
+<p>[133] <a
+href="http://www.ds3-datascience-polytechnique.fr/">Data
+Science Summer School</a>, CMAP, École Polytechnique,
+Paris, France, Aug 28-Sept 1, 2017 (invited minicourse on
+randomized optimization methods) [<a
+href="talks/RandOpt-DS3.pdf">slides</a>] <a
+href="https://portail.polytechnique.edu/datascience/fr/les-conferences"><img
+style="border: 0px solid ; width: 30px; height: 21px;"
+alt="YouTube" src="imgs/youtube.png"></a></p>
+<p>[132] <a href="https://2017.icml.cc/">34th International
+Conference on Machine Learning</a>, Sydney, Australia,
+August 6-11, 2017 (attending)</p>
+<p>[131] <a
+href="http://www.fields.utoronto.ca/activities/17-18/AN70">Workshop
 on Convex Optimization and Applications</a>, Fields
-            Institute, Toronto, Canada, July 4-7, 2017 (invited) [<a
-              href="talks/TALK-2017-FieldsInstitute-AN70.pdf">slides</a>]</p>
-          <p>[130] Research Seminar, Cardiff University, UK, June 1,
-            2017 (invited)<br>
-          </p>
-          <p>[129] Research Seminar, Plymouth University, UK, May 31,
-            2017 (invited)<a href="http://www.siam.org/meetings/op17/"><br>
-            </a></p>
-          <p>[128] <a href="http://www.siam.org/meetings/op17/">SIAM
-              Conference on Optimization</a>, Vancouver, Canada, May
-            22-25, 2017 (invited)<a
+Institute, Toronto, Canada, July 4-7, 2017 (invited) [<a
+href="talks/TALK-2017-FieldsInstitute-AN70.pdf">slides</a>]</p>
+<p>[130] Research Seminar, Cardiff University, UK, June 1,
+2017 (invited)<br>
+</p>
+<p>[129] Research Seminar, Plymouth University, UK, May 31,
+2017 (invited)<a href="http://www.siam.org/meetings/op17/"><br>
+</a></p>
+<p>[128] <a href="http://www.siam.org/meetings/op17/">SIAM
+Conference on Optimization</a>, Vancouver, Canada, May
+22-25, 2017 (invited)<a
 href="https://cemse.kaust.edu.sa/events/Pages/AMCS-Graduate-Peter-Richtarik.aspx"><br>
-            </a></p>
+</a></p>
+
           <p>[127] <a
-href="https://cemse.kaust.edu.sa/events/Pages/AMCS-Graduate-Peter-Richtarik.aspx">AMCS
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Graduate Seminar</a>, KAUST, Thuwal, Saudi Arabia, April
+href="https://cemse.kaust.edu.sa/events/Pages/AMCS-Graduate-Peter-Richtarik.aspx">AMCS Graduate Seminar</a>, KAUST, Thuwal, Saudi Arabia, April
             13, 2017 (invited)<a
               href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx"><br>
             </a></p>
+
           <p>[126] <a
               href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx">Visual
 
@@ -1020,588 +965,74 @@ Woudschoten
               Conference</a>, Zeist, The Netherlands, October 5-7, 2016
             (2 invited keynote lectures in the stream: "Numerical
             methods for big data analytics") [<a
-href="file:///Users/hydra/Documents/Work/@WEBSITE/My%20Website/talks/TALK-Woudschoten2016-Lecture1.pdf">Lecture
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              1</a>, <a
-href="file:///Users/hydra/Documents/Work/@WEBSITE/My%20Website/talks/TALK-Woudschoten2016-Lecture2.pdf">Lecture
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              2</a>] </p>
-          <p> [113] <a
-              href="https://www.royalsoced.org.uk/events/event.php?id=460">Linear
-Algebra
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              and Parallel Computing at the Heart of Scientific
-              Computing</a>, a joint event of the Royal Society of
-            Edinburgh and the French Embassy in London, Edinburgh, UK,
-            September 21, 2016 (invited) </p>
-          [112] <a
-            href="https://sites.google.com/site/learningprivacymobiledata/home">Learning,
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            Privacy and Mobile Data Workshop</a>, Google, Seattle,
-          September 13-14, 2016 (invited poster) <br>
-          <br>
-          [111] <a
+href="file:///Users/hydra/Documents/Work/@WEBSITE/My%20Website/talks/TALK-Woudschoten2016-Lecture1.pdf">Lecture   1</a>, <a
+href="file:///Users/hydra/Documents/Work/@WEBSITE/My%20Website/talks/TALK-Woudschoten2016-Lecture2.pdf">Lecture   2</a>] </p>
+
+<p> [113] <a
+href="https://www.royalsoced.org.uk/events/event.php?id=460">Linear
+Algebra and Parallel Computing at the Heart of Scientific
+Computing</a>, a joint event of the Royal Society of
+Edinburgh and the French Embassy in London, Edinburgh, UK,
+September 21, 2016 (invited) </p>
+
+<p>
+[112] <a
+href="https://sites.google.com/site/learningprivacymobiledata/home">Learning, Privacy and Mobile Data Workshop</a>, Google, Seattle,
+September 13-14, 2016 (invited poster) </p>
+
+<p>
+[111] <a
 href="http://www.ima.org.uk/conferences/conferences_calendar/5th_ima_conference_on_numerical_linear_algebra_and_optimisation.cfm.html">5th
-IMA
+IMA Conference on Numerical Linear Algebra and Optimization</a>, Birmingham, September 7-9, 2016 (co-organizer of 2 minisymposia and speaker)</p>
+
+<p>
+[110] <a
+href="http://www.theorsociety.com/Pages/Conferences/OR58/OR58.aspx">OR58</a>,
+The 58th Annual Conference of the OR Society, Portsmouth, UK,
+September 6-8, 2016 (closing plenary) [<a
+href="talks/TALK-OR58.pdf">slides</a>] <a
+href="https://www.youtube.com/watch?v=BS0kF4YijGc"><img
+alt="YouTube" src="imgs/youtube.png" border="0" width="30"
+height="21"></a></p>
+
+<p>
+[109] <a href="http://www.iccopt2016.tokyo/index.html">ICCOPT
+2016</a>, Tokyo, Japan, August 6-11, 2016 (invited)</p>
+
+<p>
+[108] <a href="http://lsec.cc.ac.cn/%7Emoa2016/index.html">2016
+International Workshop on Modern Optimization and
+Applications (MOA 2016)</a>, Beijing, China, June 27-29,
+2016 (invited)</p>
+
+<p>
+[107] <a
+href="http://meetings2.informs.org/wordpress/2016international/">INFORMS
+International Conference</a>, Hawaii, USA, June 12-15, 2016 (invited)
+</p>
+
+<p>
+[106]
+<a href="http://www.ecmath.de/research/ECMathColloquium">ECMath Colloquium "Sparsity: Statistics, Optimization and Applications"</a>, Einstein Center for Mathematics, Berlin,
+Germany, April 22, 2016 (keynote)
+</p>
+
+<p>
+[105] <a href="http://www.mfo.de/occasion/1610/www_view">Computationally and Statistically Efficient Inference for Complex
+Large-scale Data</a>, Oberwolfach, Germany, March 6-12, 2016
+(invited)
+</p>
+
+<p>
+[104]
+<a href="http://www.di.ens.fr/%7Easpremon/Houches/index.html">Optimization without  Borders</a>, Les Houches, France, February 7-12, 2016 (invited)
+</p>
+
+<p>
+[103]
+<a href="http://www.maths.ed.ac.uk/events/nbp/working-probability">Working Probability  Seminar</a>, School of Mathematics, University of Edinburgh, January 19, 2016 (invited)
+</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            Conference on Numerical Linear Algebra and Optimization</a>,
-          Birmingham, September 7-9, 2016 (co-organizer of 2
-          minisymposia and speaker)<br>
-          <br>
-          [110] <a
-            href="http://www.theorsociety.com/Pages/Conferences/OR58/OR58.aspx">OR58</a>,
-          The 58th Annual Conference of the OR Society, Portsmouth, UK,
-          September 6-8, 2016 (closing plenary) [<a
-            href="talks/TALK-OR58.pdf">slides</a>] <a
-            href="https://www.youtube.com/watch?v=BS0kF4YijGc"><img
-              alt="YouTube" src="imgs/youtube.png" border="0" width="30"
-              height="21"></a><br>
-          <br>
-          [109] <a href="http://www.iccopt2016.tokyo/index.html">ICCOPT
-            2016</a>, Tokyo, Japan, August 6-11, 2016 (invited)<br>
-          <br>
-          [108] <a href="http://lsec.cc.ac.cn/%7Emoa2016/index.html">2016
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            International Workshop on Modern Optimization and
-            Applications (MOA 2016)</a>, Beijing, China, June 27-29,
-          2016 (invited)<br>
-          <br>
-          [107] <a
-            href="http://meetings2.informs.org/wordpress/2016international/">INFORMS
-International
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            Conference</a>, Hawaii, USA, June 12-15, 2016 (invited)<br>
-          <br>
-          [106] <a
-            href="http://www.ecmath.de/research/ECMathColloquium">ECMath
-            Colloquium "Sparsity: Statistics, Optimization and
-            Applications"</a>, Einstein Center for Mathematics, Berlin,
-          Germany, April 22, 2016 (keynote)<br>
-          <br>
-          [105] <a href="http://www.mfo.de/occasion/1610/www_view">Computationally
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            and Statistically Efficient Inference for Complex
-            Large-scale Data</a>, Oberwolfach, Germany, March 6-12, 2016
-          (invited) <br>
-          <br>
-          [104] <a
-            href="http://www.di.ens.fr/%7Easpremon/Houches/index.html">Optimization
-without
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            Borders</a>, Les Houches, France, February 7-12, 2016
-          (invited)<br>
-          <p> [103] <a
-              href="http://www.maths.ed.ac.uk/events/nbp/working-probability">Working
-Probability
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Seminar</a>, School of Mathematics, University of
-            Edinburgh, January 19, 2016 (invited)</p>
           <p> [102] <a
               href="http://euler.doa.fmph.uniba.sk/TrojKralKonf.html">3KK
 
